--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 
 :root {
-    --color-primaria: #ffffff;
+    --color-primaria: #000000;
     --color-secundaria: #000000;
     --color-terciaria: #ff9900;
     --color-hover: #272727;
